[package]
name = "walcraft"
description = "A light-weight Write Ahead Log (WAL) solution with garbage collection"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://docs.rs/walcraft"
repository = "https://github.com/thumperca/walcraft"
keywords = ["wal", "write-ahead-log"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.198", features = ["derive"] }
